import {
  Column,
  CreateDateColumn,
  Entity,
  Index,
  OneToMany,
  PrimaryGeneratedColumn,
  UpdateDateColumn,
} from 'typeorm';
import { ComboItem } from '../combo_items/combo_items.entity';
import { DiningSessionCombo } from '../dining_session_combos/dining_session_combos.entity';

@Entity('combos')
@Index(['isActive'])
export class Combo {
  @PrimaryGeneratedColumn('uuid')
  id!: string;

  @Column({ type: 'varchar', length: 200 })
  name!: string;

  @Column({ type: 'text', nullable: true })
  description!: string | null;

  @Column({ type: 'decimal', precision: 12, scale: 2 })
  price!: string;

  @Column({ type: 'int', nullable: true, name: 'valid_hours' })
  validHours!: number | null;

  @Column({ type: 'boolean', default: true, name: 'is_active' })
  isActive!: boolean;

  @CreateDateColumn({ type: 'datetime', name: 'created_at' })
  createdAt!: Date;

  @UpdateDateColumn({ type: 'datetime', name: 'updated_at' })
  updatedAt!: Date;

  @OneToMany(() => ComboItem, (comboItem) => comboItem.combo)
  items!: ComboItem[];

  @OneToMany(
    () => DiningSessionCombo,
    (sessionCombo) => sessionCombo.combo,
  )
  sessionCombos!: DiningSessionCombo[];
}
